Fix paragraph spacing styling (NEED TO ORGANIZE CSS)

--- a/css/style.2.css
+++ b/css/style.2.css
@@ -100,5 +100,5 @@ button + button{
     margin-left:0.2em;
 }
 p + p {
-    margin-bottom:1em;
+    margin-top:1em;
 }
